Signed-off-by: kickjay <kickjay@163.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="renderer" content="webkit">
-        <title>Jay's Wiki</title>
+        <title>OCC Wiki</title>
         <link rel="stylesheet" type="text/css" href="amWiki/css/markdownbody.github.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/lhjs.github-gist.css" />
         <link rel="stylesheet" type="text/css" href="amWiki/css/amWiki.css" />
@@ -18,8 +18,8 @@
         <header class="header">
             <div class="header-inner">
                 <a class="logo" href="?file=首页">
-                    <img src="assets/Logo.png" /><i></i>
-                    <b>Jay's Wiki</b>
+                    <img src="https://raw.githubusercontent.com/kickjay23/kickjay23.github.io/main/assets/Logo.PNG" /><i></i>
+                    <b>OCC Wiki</b>
                     <span>Beta V0.91</span>
                 </a>
                 <div class="menu-icon" id="menuIcon">
@@ -158,8 +158,8 @@
             </div>
         </footer>
         <!-- mounts -->
-        <div class="hidden" aw-include="mountLinks"><script src="amWiki/mounts/m001-1252.js"></script><script src="amWiki/mounts/m002-286.js"></script><script src="amWiki/mounts/home-353.js"></script><script src="amWiki/mounts/nav-1179.js"></script><script src="amWiki/mounts/icon-170.js"></script>
-            <script>AWConfig={"name":"Jay's Wiki","ver":"Beta V0.91","logo":"assets/Logo.png","version":"Beta V0.91","testing":false,"colour":"#4296eb","pageMounts":true,"githubUrl":"","libraryPrefix":""}</script>
+        <div class="hidden" aw-include="mountLinks"><script src="amWiki/mounts/m001-22507.js"></script><script src="amWiki/mounts/m002-17157.js"></script><script src="amWiki/mounts/home-321.js"></script><script src="amWiki/mounts/nav-1179.js"></script><script src="amWiki/mounts/icon-170.js"></script>
+            <script>AWConfig={"name":"OCC Wiki","ver":"Beta V0.91","logo":"https://raw.githubusercontent.com/kickjay23/kickjay23.github.io/main/assets/Logo.PNG","colour":"undefined","version":"Beta V0.91","testing":false,"pageMounts":true,"githubUrl":"","libraryPrefix":""}</script>
         </div>
         <!-- js -->
         <div class="hidden">
