--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
         </footer>
         <!-- mounts -->
-        <div class="hidden" aw-include="mountLinks"><script src="amWiki/mounts/m001-22507.js"></script><script src="amWiki/mounts/m002-17157.js"></script><script src="amWiki/mounts/home-321.js"></script><script src="amWiki/mounts/nav-1179.js"></script><script src="amWiki/mounts/icon-170.js"></script>
+        <div class="hidden" aw-include="mountLinks"><script src="amWiki/mounts/m001-232.js"></script><script src="amWiki/mounts/m002-18569.js"></script><script src="amWiki/mounts/m004-6081.js"></script><script src="amWiki/mounts/home-337.js"></script><script src="amWiki/mounts/nav-512.js"></script><script src="amWiki/mounts/icon-170.js"></script>
             <script>AWConfig={"name":"OCC Wiki","ver":"Beta V0.91","logo":"https://raw.githubusercontent.com/kickjay23/kickjay23.github.io/main/assets/Logo.PNG","colour":"undefined","version":"Beta V0.91","testing":false,"pageMounts":true,"githubUrl":"","libraryPrefix":""}</script>
         </div>
         <!-- js -->
