--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="header-inner">
                 <a class="logo" href="?file=首页">
-                    <img src="https://raw.githubusercontent.com/kickjay23/kickjay23.github.io/main/assets/Logo.PNG" /><i></i>
+                    <img src="./assets/alogo.png" /><i></i>
                     <b>OCC Wiki</b>
                     <span>Beta V0.91</span>
                 </a>
@@ -158,8 +158,8 @@
             </div>
         </footer>
         <!-- mounts -->
-        <div class="hidden" aw-include="mountLinks"><script src="amWiki/mounts/m001-232.js"></script><script src="amWiki/mounts/m002-18569.js"></script><script src="amWiki/mounts/m004-6081.js"></script><script src="amWiki/mounts/home-337.js"></script><script src="amWiki/mounts/nav-512.js"></script><script src="amWiki/mounts/icon-170.js"></script>
-            <script>AWConfig={"name":"OCC Wiki","ver":"Beta V0.91","logo":"https://raw.githubusercontent.com/kickjay23/kickjay23.github.io/main/assets/Logo.PNG","colour":"undefined","version":"Beta V0.91","testing":false,"pageMounts":true,"githubUrl":"","libraryPrefix":""}</script>
+        <div class="hidden" aw-include="mountLinks"><script src="amWiki/mounts/m001-232.js"></script><script src="amWiki/mounts/m002-18569.js"></script><script src="amWiki/mounts/m003-231.js"></script><script src="amWiki/mounts/m004-6081.js"></script><script src="amWiki/mounts/home-270.js"></script><script src="amWiki/mounts/nav-564.js"></script><script src="amWiki/mounts/icon-170.js"></script>
+            <script>AWConfig={"name":"OCC Wiki","ver":"Beta V0.91","logo":"./assets/alogo.png","colour":"undefined","version":"Beta V0.91","testing":false,"pageMounts":true,"githubUrl":"","libraryPrefix":""}</script>
         </div>
         <!-- js -->
         <div class="hidden">
